--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 title: Ram Tripathi
 
 # Short description of your site
-description: A virtual proof that I'm awesome
+description: The Search for Everything
 
 # --- Local development options ---
 # If your website is hosted locally rather than on GitHub, then you need to uncomment the next two parameters to set the url and baseurl
@@ -24,7 +24,6 @@ navbar-links:
   Resources:
     - Pictures: "http://photos.google.com"
     - Music: "https://soundcloud.com/ramtripathi"
-  Author's home: "http://tripathi.io"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
@@ -68,7 +67,7 @@ author:
 # If you want to add a new link that isn't here, you'll need to also edit the file _data/SocialNetworks.yml
 social-network-links:
   rss: true
-  email: "someone@example.com"
+  email: "iamramtripathi@gmail.com"
   github: iamramtripathi
   twitter: iamramtripathi
 #  reddit: yourname
