--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,7 @@ navbar-links:
   Resources:
     - Pictures: "https://photos.app.goo.gl/vsYMFJqX27NWTRXD9"
     - Music: "https://soundcloud.com/ramtripathi"
+    - Books: "https://www.goodreads.com/ramtripathi"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
